# -blog-server-rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20220424153025_blog.sql  20220430032709_token.sql  20220430153703_gallery.sql
src/: main.rs
src/db/: gallery.rs  mod.rs  notes.rs
src/layer/: mod.rs
src/services/: gallery.rs  mod.rs  notes.rs
test/: rest_test.http
