[package]
name = "blog-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.3", features = ['default', 'headers'] }
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
tower-http = {version = "0.3.0", features=["cors"] }
http = "0.2.2"